# unic

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml  dependency_review.yml  format.yml  format_check.yml  license_check.yml  lint_check.yml  publish-to-pypi.yml  pull-request-branch-check.yml  pytest.yml  release-drafter.yml  unittest.yml
docs/: UserGuide.md
src/unitconverter/: __init__.py
src/unitconverter/time/: convert_time.py
tests/: test_convert_date.py  test_convert_datetime.py  test_convert_hour.py  test_convert_metric_system.py  test_convert_millisecond.py  test_convert_minute.py  test_convert_second.py  test_convert_timestamp.py  test_convert_unixtime.py
unic/: __init__.py
unic/configs/length_unit/: settings.toml
unic/configs/metirc_system/: settings.toml
unic/core/: base_model.py
unic/length_unit/constants/: constants.py
unic/length_unit/exceptions/: exceptions.py
unic/length_unit/metric_system/: metric_system_model.py
unic/length_unit/validators/: models.py  validators.py
unic/time_unit/constants/: constants.py
unic/time_unit/datetime/: _datetime.py  datetime_model.py
unic/time_unit/exceptions/: exceptions.py
unic/time_unit/time/: time_model.py
unic/time_unit/unixtime/: unixtime_model.py
unic/time_unit/validators/: models.py  validators.py
unic/timeobject/: timeobject.py
unic/unit/: timeunit.py
unic/unixtime/: unixtime.py
unic/utils/: args_validator.py  check_parameter.py  config_parser.py  time_helpers.py  validators.py
unicorn/: __init__.py
unicorn/config/: unit_settings.toml
unicorn/configs/: timezone.toml
unicorn/configs/unit/: settings.toml
unicorn/timeobject/: convert_timeobject.py  timeobject.py
unicorn/timeunit/: convert_timeunit.py  timeunit.py
unicorn/unit/: timeunit.py
unicorn/unit/config/: unit_settings.toml
unicorn/unixtime/: unixtime.py
unicorn/utils/: check_parameter.py  config_parser.py
unit_converter/: __init__.py
unit_converter/datetime/: convert_datetime.py
unit_converter/time/: convert_time.py
unit_converter/timeobject/: convert_datetime.py  convert_timeobject.py
unit_converter/timeobject/config/: settings.py
unit_converter/timeunit/: convert_timeunit.py
unitconverter/: __init__.py
unitconverter/time/: convert_time.py
