[project]
name = "unic"
version = "2.1.0"
description = "Python package for converting various units."
authors = [{ name = "Subretu" }]
requires-python = ">=3.9.0, <4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Subretu" }]
keywords = [
    "unit",
    "convert",
    "time",
    "timestamp",
    "length",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic~=2.1",
    "tomli>=2.0.1,<2.3.0",
]

[project.urls]
Repository = "https://github.com/subretu/unic"

[dependency-groups]
dev = [
    "mypy>=1.4.1,<1.19.0",
    "pytest-cov>=5.0,<6.3",
    "pytest>=8.2.2,<8.5.0",
    "ruff>=0.9.3,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
